// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast Type Snapshots Dark Mode Toast Types renders error toast in dark mode: Toast - Error Dark Mode 1`] = `
<View
  accessibilityLabel="Something went wrong"
  accessibilityLiveRegion="polite"
  accessibilityRole="alert"
  style={
    {
      "left": 16,
      "opacity": 0,
      "position": "absolute",
      "right": 16,
      "top": 8,
      "zIndex": 9999,
    }
  }
>
  <View
    className="rounded-xl p-3"
    style={
      {
        "backgroundColor": "#991B1B",
        "elevation": 5,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      className="flex-row gap-2 flex-1 items-center"
    >
      <AlertCircle
        color="#FCA5A5"
        size={20}
      />
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#FCA5A5",
            }
          }
        >
          Something went wrong
        </Text>
      </View>
      <View
        accessibilityHint="Double tap to dismiss this notification"
        accessibilityLabel="Dismiss notification"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 items-center justify-center p-1"
        dataSet={
          {
            "active": "false",
            "disabled": "false",
            "focus": "false",
            "focusVisible": "false",
            "hover": "false",
          }
        }
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        states={
          {
            "active": false,
            "disabled": undefined,
            "focus": false,
            "focusVisible": false,
            "hover": false,
          }
        }
        style={
          {
            "minHeight": 44,
            "minWidth": 44,
          }
        }
      >
        <X
          color="#FCA5A5"
          size={18}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Toast Type Snapshots Dark Mode Toast Types renders info toast in dark mode: Toast - Info Dark Mode 1`] = `
<View
  accessibilityLabel="Here is some information"
  accessibilityLiveRegion="polite"
  accessibilityRole="alert"
  style={
    {
      "left": 16,
      "opacity": 0,
      "position": "absolute",
      "right": 16,
      "top": 8,
      "zIndex": 9999,
    }
  }
>
  <View
    className="rounded-xl p-3"
    style={
      {
        "backgroundColor": "#0c4a6e",
        "elevation": 5,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      className="flex-row gap-2 flex-1 items-center"
    >
      <Info
        color="#93C5FD"
        size={20}
      />
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#bae6fd",
            }
          }
        >
          Here is some information
        </Text>
      </View>
      <View
        accessibilityHint="Double tap to dismiss this notification"
        accessibilityLabel="Dismiss notification"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 items-center justify-center p-1"
        dataSet={
          {
            "active": "false",
            "disabled": "false",
            "focus": "false",
            "focusVisible": "false",
            "hover": "false",
          }
        }
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        states={
          {
            "active": false,
            "disabled": undefined,
            "focus": false,
            "focusVisible": false,
            "hover": false,
          }
        }
        style={
          {
            "minHeight": 44,
            "minWidth": 44,
          }
        }
      >
        <X
          color="#93C5FD"
          size={18}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Toast Type Snapshots Dark Mode Toast Types renders success toast in dark mode: Toast - Success Dark Mode 1`] = `
<View
  accessibilityLabel="Operation completed!"
  accessibilityLiveRegion="polite"
  accessibilityRole="alert"
  style={
    {
      "left": 16,
      "opacity": 0,
      "position": "absolute",
      "right": 16,
      "top": 8,
      "zIndex": 9999,
    }
  }
>
  <View
    className="rounded-xl p-3"
    style={
      {
        "backgroundColor": "#14532D",
        "elevation": 5,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      className="flex-row gap-2 flex-1 items-center"
    >
      <CheckCircle
        color="#86EFAC"
        size={20}
      />
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#84D3A2",
            }
          }
        >
          Operation completed!
        </Text>
      </View>
      <View
        accessibilityHint="Double tap to dismiss this notification"
        accessibilityLabel="Dismiss notification"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 items-center justify-center p-1"
        dataSet={
          {
            "active": "false",
            "disabled": "false",
            "focus": "false",
            "focusVisible": "false",
            "hover": "false",
          }
        }
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        states={
          {
            "active": false,
            "disabled": undefined,
            "focus": false,
            "focusVisible": false,
            "hover": false,
          }
        }
        style={
          {
            "minHeight": 44,
            "minWidth": 44,
          }
        }
      >
        <X
          color="#86EFAC"
          size={18}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Toast Type Snapshots Dark Mode Toast Types renders warning toast in dark mode: Toast - Warning Dark Mode 1`] = `
<View
  accessibilityLabel="Please be careful"
  accessibilityLiveRegion="polite"
  accessibilityRole="alert"
  style={
    {
      "left": 16,
      "opacity": 0,
      "position": "absolute",
      "right": 16,
      "top": 8,
      "zIndex": 9999,
    }
  }
>
  <View
    className="rounded-xl p-3"
    style={
      {
        "backgroundColor": "#7c2d12",
        "elevation": 5,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      className="flex-row gap-2 flex-1 items-center"
    >
      <AlertTriangle
        color="#FDE68A"
        size={20}
      />
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#fed7aa",
            }
          }
        >
          Please be careful
        </Text>
      </View>
      <View
        accessibilityHint="Double tap to dismiss this notification"
        accessibilityLabel="Dismiss notification"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 items-center justify-center p-1"
        dataSet={
          {
            "active": "false",
            "disabled": "false",
            "focus": "false",
            "focusVisible": "false",
            "hover": "false",
          }
        }
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        states={
          {
            "active": false,
            "disabled": undefined,
            "focus": false,
            "focusVisible": false,
            "hover": false,
          }
        }
        style={
          {
            "minHeight": 44,
            "minWidth": 44,
          }
        }
      >
        <X
          color="#FDE68A"
          size={18}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Toast Type Snapshots Light Mode Toast Types renders error toast in light mode: Toast - Error Light Mode 1`] = `
<View
  accessibilityLabel="Something went wrong"
  accessibilityLiveRegion="polite"
  accessibilityRole="alert"
  style={
    {
      "left": 16,
      "opacity": 0,
      "position": "absolute",
      "right": 16,
      "top": 8,
      "zIndex": 9999,
    }
  }
>
  <View
    className="rounded-xl p-3"
    style={
      {
        "backgroundColor": "#FECACA",
        "elevation": 5,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      className="flex-row gap-2 flex-1 items-center"
    >
      <AlertCircle
        color="#EF4444"
        size={20}
      />
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#B91C1C",
            }
          }
        >
          Something went wrong
        </Text>
      </View>
      <View
        accessibilityHint="Double tap to dismiss this notification"
        accessibilityLabel="Dismiss notification"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 items-center justify-center p-1"
        dataSet={
          {
            "active": "false",
            "disabled": "false",
            "focus": "false",
            "focusVisible": "false",
            "hover": "false",
          }
        }
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        states={
          {
            "active": false,
            "disabled": undefined,
            "focus": false,
            "focusVisible": false,
            "hover": false,
          }
        }
        style={
          {
            "minHeight": 44,
            "minWidth": 44,
          }
        }
      >
        <X
          color="#EF4444"
          size={18}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Toast Type Snapshots Light Mode Toast Types renders info toast in light mode: Toast - Info Light Mode 1`] = `
<View
  accessibilityLabel="Here is some information"
  accessibilityLiveRegion="polite"
  accessibilityRole="alert"
  style={
    {
      "left": 16,
      "opacity": 0,
      "position": "absolute",
      "right": 16,
      "top": 8,
      "zIndex": 9999,
    }
  }
>
  <View
    className="rounded-xl p-3"
    style={
      {
        "backgroundColor": "#e0f2fe",
        "elevation": 5,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      className="flex-row gap-2 flex-1 items-center"
    >
      <Info
        color="#3B82F6"
        size={20}
      />
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#0369a1",
            }
          }
        >
          Here is some information
        </Text>
      </View>
      <View
        accessibilityHint="Double tap to dismiss this notification"
        accessibilityLabel="Dismiss notification"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 items-center justify-center p-1"
        dataSet={
          {
            "active": "false",
            "disabled": "false",
            "focus": "false",
            "focusVisible": "false",
            "hover": "false",
          }
        }
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        states={
          {
            "active": false,
            "disabled": undefined,
            "focus": false,
            "focusVisible": false,
            "hover": false,
          }
        }
        style={
          {
            "minHeight": 44,
            "minWidth": 44,
          }
        }
      >
        <X
          color="#3B82F6"
          size={18}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Toast Type Snapshots Light Mode Toast Types renders success toast in light mode: Toast - Success Light Mode 1`] = `
<View
  accessibilityLabel="Operation completed!"
  accessibilityLiveRegion="polite"
  accessibilityRole="alert"
  style={
    {
      "left": 16,
      "opacity": 0,
      "position": "absolute",
      "right": 16,
      "top": 8,
      "zIndex": 9999,
    }
  }
>
  <View
    className="rounded-xl p-3"
    style={
      {
        "backgroundColor": "#A2F1C0",
        "elevation": 5,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      className="flex-row gap-2 flex-1 items-center"
    >
      <CheckCircle
        color="#22C55E"
        size={20}
      />
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#206F3E",
            }
          }
        >
          Operation completed!
        </Text>
      </View>
      <View
        accessibilityHint="Double tap to dismiss this notification"
        accessibilityLabel="Dismiss notification"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 items-center justify-center p-1"
        dataSet={
          {
            "active": "false",
            "disabled": "false",
            "focus": "false",
            "focusVisible": "false",
            "hover": "false",
          }
        }
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        states={
          {
            "active": false,
            "disabled": undefined,
            "focus": false,
            "focusVisible": false,
            "hover": false,
          }
        }
        style={
          {
            "minHeight": 44,
            "minWidth": 44,
          }
        }
      >
        <X
          color="#22C55E"
          size={18}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Toast Type Snapshots Light Mode Toast Types renders warning toast in light mode: Toast - Warning Light Mode 1`] = `
<View
  accessibilityLabel="Please be careful"
  accessibilityLiveRegion="polite"
  accessibilityRole="alert"
  style={
    {
      "left": 16,
      "opacity": 0,
      "position": "absolute",
      "right": 16,
      "top": 8,
      "zIndex": 9999,
    }
  }
>
  <View
    className="rounded-xl p-3"
    style={
      {
        "backgroundColor": "#ffedd5",
        "elevation": 5,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      className="flex-row gap-2 flex-1 items-center"
    >
      <AlertTriangle
        color="#F59E0B"
        size={20}
      />
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#c2410c",
            }
          }
        >
          Please be careful
        </Text>
      </View>
      <View
        accessibilityHint="Double tap to dismiss this notification"
        accessibilityLabel="Dismiss notification"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 items-center justify-center p-1"
        dataSet={
          {
            "active": "false",
            "disabled": "false",
            "focus": "false",
            "focusVisible": "false",
            "hover": "false",
          }
        }
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        states={
          {
            "active": false,
            "disabled": undefined,
            "focus": false,
            "focusVisible": false,
            "hover": false,
          }
        }
        style={
          {
            "minHeight": 44,
            "minWidth": 44,
          }
        }
      >
        <X
          color="#F59E0B"
          size={18}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Toast Type Snapshots Toast Content Variants renders toast with long message: Toast - Long Message 1`] = `
<View
  accessibilityLabel="This is a very long message that might wrap to multiple lines on smaller screen sizes to ensure proper text handling"
  accessibilityLiveRegion="polite"
  accessibilityRole="alert"
  style={
    {
      "left": 16,
      "opacity": 0,
      "position": "absolute",
      "right": 16,
      "top": 8,
      "zIndex": 9999,
    }
  }
>
  <View
    className="rounded-xl p-3"
    style={
      {
        "backgroundColor": "#ffedd5",
        "elevation": 5,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      className="flex-row gap-2 flex-1 items-center"
    >
      <AlertTriangle
        color="#F59E0B"
        size={20}
      />
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#c2410c",
            }
          }
        >
          This is a very long message that might wrap to multiple lines on smaller screen sizes to ensure proper text handling
        </Text>
      </View>
      <View
        accessibilityHint="Double tap to dismiss this notification"
        accessibilityLabel="Dismiss notification"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 items-center justify-center p-1"
        dataSet={
          {
            "active": "false",
            "disabled": "false",
            "focus": "false",
            "focusVisible": "false",
            "hover": "false",
          }
        }
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        states={
          {
            "active": false,
            "disabled": undefined,
            "focus": false,
            "focusVisible": false,
            "hover": false,
          }
        }
        style={
          {
            "minHeight": 44,
            "minWidth": 44,
          }
        }
      >
        <X
          color="#F59E0B"
          size={18}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Toast Type Snapshots Toast Content Variants renders toast with short message: Toast - Short Message 1`] = `
<View
  accessibilityLabel="Done"
  accessibilityLiveRegion="polite"
  accessibilityRole="alert"
  style={
    {
      "left": 16,
      "opacity": 0,
      "position": "absolute",
      "right": 16,
      "top": 8,
      "zIndex": 9999,
    }
  }
>
  <View
    className="rounded-xl p-3"
    style={
      {
        "backgroundColor": "#e0f2fe",
        "elevation": 5,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      className="flex-row gap-2 flex-1 items-center"
    >
      <Info
        color="#3B82F6"
        size={20}
      />
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#0369a1",
            }
          }
        >
          Done
        </Text>
      </View>
      <View
        accessibilityHint="Double tap to dismiss this notification"
        accessibilityLabel="Dismiss notification"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 items-center justify-center p-1"
        dataSet={
          {
            "active": "false",
            "disabled": "false",
            "focus": "false",
            "focusVisible": "false",
            "hover": "false",
          }
        }
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        states={
          {
            "active": false,
            "disabled": undefined,
            "focus": false,
            "focusVisible": false,
            "hover": false,
          }
        }
        style={
          {
            "minHeight": 44,
            "minWidth": 44,
          }
        }
      >
        <X
          color="#3B82F6"
          size={18}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Toast Type Snapshots Toast Content Variants renders toast with special characters: Toast - Special Characters 1`] = `
<View
  accessibilityLabel="Operación completada con éxito 🎉"
  accessibilityLiveRegion="polite"
  accessibilityRole="alert"
  style={
    {
      "left": 16,
      "opacity": 0,
      "position": "absolute",
      "right": 16,
      "top": 8,
      "zIndex": 9999,
    }
  }
>
  <View
    className="rounded-xl p-3"
    style={
      {
        "backgroundColor": "#e0f2fe",
        "elevation": 5,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      className="flex-row gap-2 flex-1 items-center"
    >
      <Info
        color="#3B82F6"
        size={20}
      />
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#0369a1",
            }
          }
        >
          Operación completada con éxito 🎉
        </Text>
      </View>
      <View
        accessibilityHint="Double tap to dismiss this notification"
        accessibilityLabel="Dismiss notification"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 items-center justify-center p-1"
        dataSet={
          {
            "active": "false",
            "disabled": "false",
            "focus": "false",
            "focusVisible": "false",
            "hover": "false",
          }
        }
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        states={
          {
            "active": false,
            "disabled": undefined,
            "focus": false,
            "focusVisible": false,
            "hover": false,
          }
        }
        style={
          {
            "minHeight": 44,
            "minWidth": 44,
          }
        }
      >
        <X
          color="#3B82F6"
          size={18}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Toast Type Snapshots Toast with Title renders error toast with title: Toast - Error With Title 1`] = `
<View
  accessibilityLabel="Error: Please try again later"
  accessibilityLiveRegion="polite"
  accessibilityRole="alert"
  style={
    {
      "left": 16,
      "opacity": 0,
      "position": "absolute",
      "right": 16,
      "top": 8,
      "zIndex": 9999,
    }
  }
>
  <View
    className="rounded-xl p-3"
    style={
      {
        "backgroundColor": "#FECACA",
        "elevation": 5,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      className="flex-row gap-2 flex-1 items-center"
    >
      <AlertCircle
        color="#EF4444"
        size={20}
      />
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#B91C1C",
            }
          }
        >
          Error
        </Text>
        <Text
          style={
            {
              "color": "#B91C1C",
            }
          }
        >
          Please try again later
        </Text>
      </View>
      <View
        accessibilityHint="Double tap to dismiss this notification"
        accessibilityLabel="Dismiss notification"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 items-center justify-center p-1"
        dataSet={
          {
            "active": "false",
            "disabled": "false",
            "focus": "false",
            "focusVisible": "false",
            "hover": "false",
          }
        }
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        states={
          {
            "active": false,
            "disabled": undefined,
            "focus": false,
            "focusVisible": false,
            "hover": false,
          }
        }
        style={
          {
            "minHeight": 44,
            "minWidth": 44,
          }
        }
      >
        <X
          color="#EF4444"
          size={18}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Toast Type Snapshots Toast with Title renders toast with title and message: Toast - With Title 1`] = `
<View
  accessibilityLabel="Success!: Your changes have been saved"
  accessibilityLiveRegion="polite"
  accessibilityRole="alert"
  style={
    {
      "left": 16,
      "opacity": 0,
      "position": "absolute",
      "right": 16,
      "top": 8,
      "zIndex": 9999,
    }
  }
>
  <View
    className="rounded-xl p-3"
    style={
      {
        "backgroundColor": "#A2F1C0",
        "elevation": 5,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View
      className="flex-row gap-2 flex-1 items-center"
    >
      <CheckCircle
        color="#22C55E"
        size={20}
      />
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#206F3E",
            }
          }
        >
          Success!
        </Text>
        <Text
          style={
            {
              "color": "#206F3E",
            }
          }
        >
          Your changes have been saved
        </Text>
      </View>
      <View
        accessibilityHint="Double tap to dismiss this notification"
        accessibilityLabel="Dismiss notification"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 items-center justify-center p-1"
        dataSet={
          {
            "active": "false",
            "disabled": "false",
            "focus": "false",
            "focusVisible": "false",
            "hover": "false",
          }
        }
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        states={
          {
            "active": false,
            "disabled": undefined,
            "focus": false,
            "focusVisible": false,
            "hover": false,
          }
        }
        style={
          {
            "minHeight": 44,
            "minWidth": 44,
          }
        }
      >
        <X
          color="#22C55E"
          size={18}
        />
      </View>
    </View>
  </View>
</View>
`;
